# chutes-agent-toolkit

./: .gitignore  LICENSE  README.md  llms.txt
.github/workflows/: refresh-chutes-models.yml
cookbook/: README.md
cookbook/javascript/: chat.mjs
cookbook/python/: 01_first_call.py  02_streaming.py  03_tool_calling.py  04_structured_output.py  05_routing_failover.py  06_vision.py  07_mini_agent.py
data/: agent-use-cases.json  chutes-model-pages.json  chutes-models.json
data/model-pages/: astroboi-halo-guard.llms.txt  astroboi-halo4b-guard-alpha.llms.txt  astroboi-haloqwen-output-guard.llms.txt  chutes-deepseek-ai-deepseek-v3-2-tee.llms.txt  chutes-google-gemma-4-31b-turbo-tee.llms.txt  chutes-kokoro.llms.txt  (+25 more)
docs/: api-reference.md  chutes-maxi-proposal.md  credential-store.md  endpoint-guide.md  hermes-agent-hub-plan.md  hermes-chutes-toolkit-guide.md  hermes-integration-spec.md  known-models.md  llms-txt-review.md  model-aliases.md  model-pages.md  oauth-app-management.md  oauth-scope-cookbook.md  pre-hermes-phase2-checklist.md  roadmap.md  save-credentials-deprecation.md  sign-in-with-chutes.md  site-agent-growth-kit.md
evals/: README.md  evals.json
plugins/chutes-ai/skills/chutes-mcp-portability/mcp-server/: README.md  pyproject.toml  server.py
scripts/: build_agent_site_pack.py  build_model_pages.py  hermes_chutes_doctor.py  pick_model.py  run_evals.py  update_chutes_models.py
site/: README.md
tests/: test_build_agent_site_pack.py  test_hermes_chutes_doctor.py  test_manage_credentials.py  test_pick_model.py  test_run_evals.py
(+106 files in other folders)
