[project]
name = "chutes-mcp-server"
version = "0.1.0-beta.1"
description = "MCP server exposing Chutes.ai management + inference endpoints. BETA."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vincent Bontempo", email = "bontempo.vincent@gmail.com" }]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
chutes-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
