[project]
name = "chutes-mcp-server"
version = "0.1.0-beta.1"
description = "MCP server exposing Chutes.ai management + inference endpoints. BETA."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vincent Bontempo", email = "bontempo.vincent@gmail.com" }]
dependencies = [
    # FastMCP import path (`mcp.server.fastmcp`) is the 1.x location; mcp 2.0.0a1
    # exists on PyPI as of 2026-06-11 and 2.x compatibility is unverified, so cap at <2.
    "mcp>=1.2,<2",
]

[project.scripts]
chutes-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
